server / database is source of truth
